[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liouss-python-sql-connectors"
version = "0.3.0"
description = "Liouss' SQL Python Connectors"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["sqlparse", "oracledb", "liouss-python-toolkit @ git+https://github.com/LioussSuperDev/Python-Toolkit.git@stable"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"] }